--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+########################################
+# VS Code workspace & editor artifacts
+########################################
 *.code-workspace
+.vscode/
+
+########################################
+# Python bytecode / cache files
+########################################
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+########################################
+# PyInstaller build artifacts
+########################################
+build/
+dist/
+*.spec
+
+########################################
+# OS-specific junk files
+########################################
+.DS_Store
+Thumbs.db
+
+########################################
+# Temporary files
+########################################
+*.tmp
+*.log
