Created release notes checklist, and updated .gitignore to keep it local

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 .vscode/
 
 ########################################
+# Release Checklist
+########################################
+*.notes.md
+
+########################################
 # Python bytecode / cache files
 ########################################
 __pycache__/
