Updated placeholder-package manifest.json to stress test different path configurations, third attempt to format .mds .xml properly, and updated source and target directory logic within install.py

--- a/packages/placeholder-package/manifest.json
+++ b/packages/placeholder-package/manifest.json
@@ -6,12 +6,11 @@
   ],
   "files": [
     {
-      "fileName": "blah.txt",
-      "location": "Stores/Files/sample-folder"
+      "fileName": "blah.txt"
     },
     {
       "fileName": "blah-two.txt",
-      "location": "Stores/Files/sample-folder"
+      "location": "Stores\\Files\\sample-folder"
     }
   ]
 }
